add question for flink